--- a/Aquarium/Aquarium.csproj
+++ b/Aquarium/Aquarium.csproj
@@ -48,19 +48,34 @@
   <ItemGroup>
     <Compile Include="Controllers\AquariumController.cs" />
     <Compile Include="Controllers\IAquariumController.cs" />
+    <Compile Include="Controls\AquariumControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\AquariumControl.Designer.cs">
+      <DependentUpon>AquariumControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\Aquarium.cs" />
+    <Compile Include="Model\AquariumModel.cs" />
     <Compile Include="Model\Enums\Direction.cs" />
     <Compile Include="Model\Fish.cs" />
     <Compile Include="Model\IAquarium.cs" />
+    <Compile Include="Model\IFish.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ColorHelper.cs" />
+    <Compile Include="Utils\DirectionHelper.cs" />
     <Compile Include="View\IView.cs" />
+    <EmbeddedResource Include="Controls\AquariumControl.resx">
+      <DependentUpon>AquariumControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
