--- a/Aquarium/Aquarium.csproj
+++ b/Aquarium/Aquarium.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Model\Fish.cs" />
     <Compile Include="Model\IAquarium.cs" />
     <Compile Include="Model\IFish.cs" />
+    <Compile Include="Model\Strategies\IAquariumContext.cs" />
+    <Compile Include="Model\Strategies\IMovementStrategy.cs" />
+    <Compile Include="Model\Strategies\SimpleMovementStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ColorHelper.cs" />
@@ -95,6 +98,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
