--- a/Aquarium/Aquarium.csproj
+++ b/Aquarium/Aquarium.csproj
@@ -46,12 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\AquariumController.cs" />
-    <Compile Include="Controllers\IAquariumController.cs" />
-    <Compile Include="Controls\AquariumControl.cs">
+    <Compile Include="Utils\FormExtensions.cs" />
+    <Compile Include="View\Controls\AquariumControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\AquariumControl.Designer.cs">
+    <Compile Include="View\Controls\AquariumControl.Designer.cs">
       <DependentUpon>AquariumControl.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
@@ -61,19 +60,35 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\AquariumModel.cs" />
+    <Compile Include="Model\Entities\Interfaces\IAquariumDrawableObject.cs" />
+    <Compile Include="Model\Entities\Interfaces\IAquariumMovableObject.cs" />
+    <Compile Include="Model\Entities\Interfaces\IAquariumObject.cs" />
+    <Compile Include="Model\Entities\Interfaces\IAquariumObjectDrawer.cs" />
+    <Compile Include="Model\Entities\Parameters\BaseParameters.cs" />
+    <Compile Include="Model\Enums\AquariumObjectType.cs" />
+    <Compile Include="Model\Initialization\AquariumInitializationParameters.cs" />
+    <Compile Include="Model\Initialization\AquariumObjectListInitializer.cs" />
+    <Compile Include="Model\Factory\AquariumObjectFactory.cs" />
+    <Compile Include="Model\Entities\Parameters\FishParameters.cs" />
+    <Compile Include="Model\Entities\Parameters\SeaweedParameters.cs" />
+    <Compile Include="Model\Entities\Seaweed.cs" />
     <Compile Include="Model\Enums\Direction.cs" />
-    <Compile Include="Model\Fish.cs" />
+    <Compile Include="Model\Entities\Fish.cs" />
     <Compile Include="Model\IAquarium.cs" />
-    <Compile Include="Model\IFish.cs" />
     <Compile Include="Model\Strategies\IAquariumContext.cs" />
+    <Compile Include="Model\Strategies\IFishContext.cs" />
     <Compile Include="Model\Strategies\IMovementStrategy.cs" />
     <Compile Include="Model\Strategies\SimpleMovementStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ColorHelper.cs" />
-    <Compile Include="Utils\DirectionHelper.cs" />
+    <Compile Include="View\Drawers\BaseDrawer.cs" />
+    <Compile Include="View\Drawers\FishDrawer.cs" />
+    <Compile Include="View\Drawers\SeaweedDrawer.cs" />
+    <Compile Include="View\Entities\ImageInfo.cs" />
+    <Compile Include="View\IDrawableView.cs" />
     <Compile Include="View\IView.cs" />
-    <EmbeddedResource Include="Controls\AquariumControl.resx">
+    <EmbeddedResource Include="View\Controls\AquariumControl.resx">
       <DependentUpon>AquariumControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
@@ -87,6 +102,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -98,7 +114,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\fish.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\seaweed.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
