--- a/Aquarium/Aquarium.csproj
+++ b/Aquarium/Aquarium.csproj
@@ -46,7 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Utils\FormExtensions.cs" />
+    <Compile Include="Model\Entities\AquariumObject.cs" />
+    <Compile Include="Model\Events\ModelUpdatedEventArgs.cs" />
+    <Compile Include="Model\Events\UnhandledErrorEventArgs.cs" />
+    <Compile Include="Model\Position\AquariumPositionContext.cs" />
+    <Compile Include="Model\Rendering\IDrawingControl.cs" />
     <Compile Include="View\Controls\AquariumControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -63,7 +67,7 @@
     <Compile Include="Model\Entities\Interfaces\IAquariumDrawableObject.cs" />
     <Compile Include="Model\Entities\Interfaces\IAquariumMovableObject.cs" />
     <Compile Include="Model\Entities\Interfaces\IAquariumObject.cs" />
-    <Compile Include="Model\Entities\Interfaces\IAquariumObjectDrawer.cs" />
+    <Compile Include="Model\Rendering\IAquariumObjectRenderer.cs" />
     <Compile Include="Model\Entities\Parameters\BaseParameters.cs" />
     <Compile Include="Model\Enums\AquariumObjectType.cs" />
     <Compile Include="Model\Initialization\AquariumInitializationParameters.cs" />
@@ -75,19 +79,13 @@
     <Compile Include="Model\Enums\Direction.cs" />
     <Compile Include="Model\Entities\Fish.cs" />
     <Compile Include="Model\IAquarium.cs" />
-    <Compile Include="Model\Strategies\IAquariumContext.cs" />
-    <Compile Include="Model\Strategies\IFishContext.cs" />
+    <Compile Include="Model\Position\IAquariumPositionContext.cs" />
+    <Compile Include="Model\Entities\Interfaces\IAquariumMovableObjectEditable.cs" />
     <Compile Include="Model\Strategies\IMovementStrategy.cs" />
     <Compile Include="Model\Strategies\SimpleMovementStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ColorHelper.cs" />
-    <Compile Include="View\Drawers\BaseDrawer.cs" />
-    <Compile Include="View\Drawers\FishDrawer.cs" />
-    <Compile Include="View\Drawers\SeaweedDrawer.cs" />
-    <Compile Include="View\Entities\ImageInfo.cs" />
-    <Compile Include="View\IDrawableView.cs" />
-    <Compile Include="View\IView.cs" />
+    <Compile Include="View\Drawers\Renderer.cs" />
     <EmbeddedResource Include="View\Controls\AquariumControl.resx">
       <DependentUpon>AquariumControl.cs</DependentUpon>
     </EmbeddedResource>
