--- a/Aquarium/Aquarium.csproj
+++ b/Aquarium/Aquarium.csproj
@@ -47,10 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Entities\AquariumObject.cs" />
+    <Compile Include="Model\Enums\EnumExtension.cs" />
     <Compile Include="Model\Events\ModelUpdatedEventArgs.cs" />
     <Compile Include="Model\Events\UnhandledErrorEventArgs.cs" />
+    <Compile Include="Model\Factory\ObjectTypeAttribute.cs" />
     <Compile Include="Model\Position\AquariumPositionContext.cs" />
     <Compile Include="Model\Rendering\IDrawingControl.cs" />
+    <Compile Include="Model\Strategies\SinMovementStrategy.cs" />
     <Compile Include="View\Controls\AquariumControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -85,7 +88,7 @@
     <Compile Include="Model\Strategies\SimpleMovementStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\Drawers\Renderer.cs" />
+    <Compile Include="View\Drawers\ImageRenderer.cs" />
     <EmbeddedResource Include="View\Controls\AquariumControl.resx">
       <DependentUpon>AquariumControl.cs</DependentUpon>
     </EmbeddedResource>
