--- a/Aquarium/Aquarium.csproj
+++ b/Aquarium/Aquarium.csproj
@@ -51,9 +51,13 @@
     <Compile Include="Model\Events\ModelUpdatedEventArgs.cs" />
     <Compile Include="Model\Events\UnhandledErrorEventArgs.cs" />
     <Compile Include="Model\Factory\ObjectTypeAttribute.cs" />
+    <Compile Include="Model\Initialization\AquariumInitializationParametersSinFishes.cs" />
+    <Compile Include="Model\Initialization\AquariumObjectListInitializerSinFishes.cs" />
     <Compile Include="Model\Position\AquariumPositionContext.cs" />
     <Compile Include="Model\Rendering\IDrawingControl.cs" />
+    <Compile Include="Model\Rendering\IRendererSelector.cs" />
     <Compile Include="Model\Strategies\SinMovementStrategy.cs" />
+    <Compile Include="Model\Strategies\SinMovementStrategyAdapter.cs" />
     <Compile Include="View\Controls\AquariumControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -89,6 +93,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Drawers\ImageRenderer.cs" />
+    <Compile Include="View\Drawers\ImageRendererSelector.cs" />
     <EmbeddedResource Include="View\Controls\AquariumControl.resx">
       <DependentUpon>AquariumControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -120,6 +125,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\seaweed.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fish_red.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
